# PythonProjekt3_new

./: .flake8  README.md  main.py  pyproject.toml  toml
src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_masking.py  test_processing.py  test_widget.py
