[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Lobysev Sergey sergrih1980@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
.git/
'''

[tool.isort]
line_length = 119

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true
exclude = ["venv"]

[dependency-groups]
lint = [
    "mypy (>=1.19.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
